crates/gobley-uniffi-bindgen/src/snapshots/gobley_uniffi_bindgen__snapshot_tests__errors.stub.kt.snap
---
source: crates/gobley-uniffi-bindgen/src/snapshot_tests.rs
expression: "bindings.stub.as_deref().unwrap_or(\"\")"
---


@file:Suppress("RemoveRedundantBackticks")

package uniffi.errors

// Public interface members begin here.









public actual fun `checkedAdd`(`a`: kotlin.ULong, `b`: kotlin.ULong): kotlin.ULong {
    TODO()
}
